<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/on_button"
            style="@style/button_style"
            android:text="@string/on_button" />

        <Button
            android:id="@+id/off_button"
            style="@style/button_style"
            android:text="@string/off_button" />

        <Button
            android:id="@+id/red_button"
            style="@style/button_style"
            android:text="@string/red_button" />

        <Button
            android:id="@+id/is_button"
            style="@style/button_style"
            android:text="@string/is_button" />

        <Button
            android:id="@+id/grad_button"
            style="@style/button_style"
            android:text="@string/grad_button" />

        <Button
            android:id="@+id/sw_button"
            style="@style/button_style"
            android:text="@string/sw_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/i10_button"
            style="@style/button_style"
            android:text="@string/i10_button" />

        <Button
            android:id="@+id/i20_button"
            style="@style/button_style"
            android:text="@string/i20_button" />

        <Button
            android:id="@+id/i30_button"
            style="@style/button_style"
            android:text="@string/i30_button" />

        <Button
            android:id="@+id/i50_button"
            style="@style/button_style"
            android:text="@string/i50_button" />

        <Button
            android:id="@+id/i75_button"
            style="@style/button_style"
            android:text="@string/i75_button" />

        <Button
            android:id="@+id/i100_button"
            style="@style/button_style"
            android:text="@string/i100_button" />


    </LinearLayout>

</LinearLayout>